# libtlv

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Readme.md  microbench.cpp  test.cpp  tlv.cpp  tlv.hpp  tlv.txt  tlv2.txt  tlvutil.cpp
include/libtlv/: tlv.hpp
